[gd_scene load_steps=98 format=2]

[ext_resource path="res://assets/Player/player idle-Sheet.png" type="Texture" id=1]
[ext_resource path="res://assets/Player/double jump_right.png" type="Texture" id=2]
[ext_resource path="res://assets/Player/death_right.png" type="Texture" id=3]
[ext_resource path="res://assets/Player/run_left.png" type="Texture" id=4]
[ext_resource path="res://assets/Player/double_jump_left.png" type="Texture" id=5]
[ext_resource path="res://assets/Player/jump_left.png" type="Texture" id=6]
[ext_resource path="res://assets/Player/jump_right.png" type="Texture" id=7]
[ext_resource path="res://assets/Player/run cycle_right.png" type="Texture" id=8]
[ext_resource path="res://Scripts/Player/Player.gd" type="Script" id=9]
[ext_resource path="res://Scripts/Player/StateMachineCode/StateMachine.gd" type="Script" id=10]
[ext_resource path="res://Scripts/Player/StateMachineCode/States/Idle.gd" type="Script" id=11]
[ext_resource path="res://assets/Player/Idle_left.png" type="Texture" id=12]
[ext_resource path="res://Scripts/Player/StateMachineCode/States/Air.gd" type="Script" id=13]
[ext_resource path="res://Scripts/Player/StateMachineCode/States/Run.gd" type="Script" id=14]
[ext_resource path="res://Scripts/Player/StateMachineCode/States/Land.gd" type="Script" id=15]
[ext_resource path="res://Nodes/Bullet.tscn" type="PackedScene" id=16]
[ext_resource path="res://assets/Chain.tscn" type="PackedScene" id=17]
[ext_resource path="res://Nodes/Particles/Run_Smoke.tscn" type="PackedScene" id=18]
[ext_resource path="res://Nodes/Spawner.tscn" type="PackedScene" id=19]
[ext_resource path="res://assets/Sounds/GrapplingHookShot.wav" type="AudioStream" id=20]

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=107]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=108]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=109]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 5 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=112]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=113]
atlas = ExtResource( 12 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=114]
atlas = ExtResource( 12 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=115]
atlas = ExtResource( 12 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=116]
atlas = ExtResource( 12 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=117]
atlas = ExtResource( 12 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=118]
atlas = ExtResource( 12 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=119]
atlas = ExtResource( 12 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 6 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 6 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 6 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 6 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 7 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 7 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 7 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 4 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 8 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 8 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 8 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 8 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 8 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 8 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 8 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=110]
animations = [ {
"frames": [ SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ) ],
"loop": false,
"name": "Death",
"speed": 10.0
}, {
"frames": [ SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 97 ) ],
"loop": true,
"name": "Double Jump_left",
"speed": 5.0
}, {
"frames": [ SubResource( 53 ), SubResource( 51 ), SubResource( 50 ), SubResource( 52 ), SubResource( 49 ), SubResource( 48 ), SubResource( 47 ), SubResource( 98 ) ],
"loop": false,
"name": "Double Jump_right",
"speed": 14.0
}, {
"frames": [ SubResource( 100 ) ],
"loop": false,
"name": "Hide",
"speed": 5.0
}, {
"frames": [ SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ) ],
"loop": true,
"name": "Idle_left",
"speed": 8.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "Idle_right",
"speed": 8.0
}, {
"frames": [ SubResource( 79 ) ],
"loop": true,
"name": "In_air_left",
"speed": 5.0
}, {
"frames": [ SubResource( 62 ) ],
"loop": true,
"name": "In_air_right",
"speed": 5.0
}, {
"frames": [ SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ) ],
"loop": true,
"name": "Jump_up_left",
"speed": 5.0
}, {
"frames": [ SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ) ],
"loop": false,
"name": "Jump_up_right",
"speed": 14.0
}, {
"frames": [ SubResource( 80 ), SubResource( 81 ) ],
"loop": false,
"name": "Land_left",
"speed": 14.0
}, {
"frames": [ SubResource( 63 ), SubResource( 64 ) ],
"loop": false,
"name": "Land_right",
"speed": 14.0
}, {
"frames": [ SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ) ],
"loop": true,
"name": "Running_left",
"speed": 14.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 31 ), SubResource( 30 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": true,
"name": "Running_right",
"speed": 14.0
} ]

[sub_resource type="CapsuleShape2D" id=111]
radius = 17.1699
height = 23.6216

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 9 )

[node name="HookShot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 20 )
max_distance = 1000.0
area_mask = 2

[node name="Chain" parent="." instance=ExtResource( 17 )]

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.176773, 0.176777 )
scale = Vector2( 2, 2 )
frames = SubResource( 110 )
animation = "Idle_right"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 3 )
shape = SubResource( 111 )

[node name="Spawner" parent="." instance=ExtResource( 19 )]
bulletScene = ExtResource( 16 )

[node name="left_run_particles" parent="." instance=ExtResource( 18 )]
position = Vector2( 16.6865, 26.2217 )

[node name="right_run_particles" parent="." instance=ExtResource( 18 )]
position = Vector2( -16.1568, 26.2217 )
scale = Vector2( -1, 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 10 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 11 )
_animation_player = NodePath("../../Sprite")

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource( 14 )
_animation_player = NodePath("../../Sprite")
_right_run_particles = NodePath("../../right_run_particles")
_left_run_particles = NodePath("../../left_run_particles")

[node name="Air" type="Node" parent="StateMachine"]
script = ExtResource( 13 )
_animation_player = NodePath("../../Sprite")

[node name="Land" type="Node" parent="StateMachine"]
script = ExtResource( 15 )
_animation_player = NodePath("../../Sprite")

[connection signal="animation_finished" from="Sprite" to="StateMachine/Land" method="_on_Sprite_animation_finished"]
